fix: add font-size and  nav z-index

--- a/src/main.scss
+++ b/src/main.scss
@@ -3,10 +3,12 @@
 
 html{
 	scroll-behavior: smooth;
+	font-size: 10px;
 }
 
 .nav-container{
 	position: fixed;
+	z-index: 10;
 	top: 0;
 	background-color: #fff;
 	width: 100%;
